fixed issue when viewing modals on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -237,7 +237,7 @@ li {
 
 .modal {
   height: auto;
-  width: 90vw;
+  width: 85vw;
   background: #212121;
   border-radius: 0;
   padding: 2em;
